# Function-Calling

./: README.md  pyproject.toml
Weather Forecasting/: README.md  main.py
